[gd_scene load_steps=34 format=3]

[ext_resource type="PackedScene" uid="uid://cgaeu2ag4857g" path="res://Scene/Base/BaseMonster.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Monster/Monster_56.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://ckhkvuqdwg716" path="res://Scene/Monster/zlw_special_effect_2.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cvhk83umguk3e" path="res://Art/Monster/Monster_56/Body.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cf7nmw1dyjva0" path="res://Art/Monster/Monster_56/Head.png" id="5"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "5" )
region = Rect2(204, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "5" )
region = Rect2(408, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "5" )
region = Rect2(612, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "5" )
region = Rect2(816, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "5" )
region = Rect2(1020, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "5" )
region = Rect2(1224, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "5" )
region = Rect2(1428, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "5" )
region = Rect2(1632, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "5" )
region = Rect2(1836, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "5" )
region = Rect2(1836, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "5" )
region = Rect2(1632, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "5" )
region = Rect2(1428, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "5" )
region = Rect2(1224, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "5" )
region = Rect2(1020, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "5" )
region = Rect2(816, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "5" )
region = Rect2(612, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "5" )
region = Rect2(408, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "5" )
region = Rect2(204, 0, 204, 155)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 204, 155)
script = null

[sub_resource type="SpriteFrames" id="21"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}],
"loop": true,
"name": &"wait",
"speed": 19.0
}]
script = null

[sub_resource type="Animation" id="22"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="23"]
resource_name = "death"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4, 1.5, 1.6, 1.6001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"fall_medicine"
}, {
"args": [],
"method": &"fall_items"
}, {
"args": [],
"method": &"queue_free"
}, {
"args": [],
"method": &"fall_stone_"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="Animation" id="24"]
length = 1.33333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["wait"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="AnimationLibrary" id="25"]
_data = {
"RESET": SubResource( "22" ),
"death": SubResource( "23" ),
"wait": SubResource( "24" )
}
script = null

[sub_resource type="CircleShape2D" id="26"]
script = null

[sub_resource type="CircleShape2D" id="27"]
radius = 64.9384
script = null

[sub_resource type="RectangleShape2D" id="28"]
size = Vector2(770, 587)
script = null

[node name="Monster_56" instance=ExtResource( "1" )]
self_modulate = Color(1, 1, 1, 0)
collision_mask = 1
script = ExtResource( "2" )

[node name="MonsterDir" parent="." index="1"]
metadata/_edit_lock_ = true

[node name="zlwSpecialEffect_2" parent="MonsterDir" index="0" instance=ExtResource( "3" )]
position = Vector2(14, -80)
metadata/_edit_lock_ = true

[node name="Body" type="Sprite2D" parent="MonsterDir" index="1"]
position = Vector2(2, 133)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="mr_ani" parent="MonsterDir" index="2"]
sprite_frames = SubResource( "21" )
animation = &"wait"
frame = 11
frame_progress = 0.225909
metadata/_edit_lock_ = true

[node name="mr_player" parent="." index="2"]
libraries = {
"": SubResource( "25" )
}

[node name="BaseDamageBox" parent="." index="3"]
metadata/_edit_lock_ = true

[node name="HitBox" parent="BaseDamageBox" index="0"]
collision_layer = 132

[node name="HitBox" parent="BaseDamageBox/HitBox" index="0"]
shape = SubResource( "26" )
disabled = true

[node name="HurtBox" parent="BaseDamageBox" index="1"]
collision_layer = 3136

[node name="HurtBox" parent="BaseDamageBox/HurtBox" index="0"]
shape = SubResource( "27" )
metadata/_edit_lock_ = true

[node name="pz" parent="." index="4"]
position = Vector2(-4, 24.5)
shape = SubResource( "28" )
metadata/_edit_lock_ = true
